top-banner added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banna Portfolio</title>
+    <link rel="stylesheet" hre<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital@1&family=Staatliches&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="orange-color">Banna Das</span> World!</h1>
+            <h3>A First Year Student Who Has Been Stuck At Home For One Year Due To Corona</h3>
+            <p>You may think that I study a lot. But the truth is I do not study at all.My marks do not come well in the
+                exam.I
+                don't even know what to do after graduating from Physics.That's why I thought I would learn Web
+                Development.Keep
+                me in your prayer.</p>
+            <a class="link-button" target="_blank" href="https://www.programming-hero.com/"> HIRE ME</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/banna.png" alt="">
+        </div>
+    </section>
 
 </body>
 
