--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="orange-color">Banna Das</span> World!</h1>
@@ -31,7 +31,7 @@
             <img src="images/banna.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -44,6 +44,29 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experiencec" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h2 class="orange-color">2020-present | pro level developer</h2>
+                <p>I am the master of HTML,CSS and Javascript.I know everything needed to make a website
+                    function,efficient.I didn't stop with the web.I went beyond with most popular Javascript framework
+                    called Vue Js.I even know the development,server and security.I will give yoy 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Junior Web Developer</h2>
+                <h2 class="orange-color">2021-2023 | Hero Learner</h2>
+                <p>They didn't offer me a job.But I made myself as a remove web developer.I made their website and
+                    showed it
+                    to them.They liked it and uploaded the content.It was fun working at Programming Hero. </p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>Jhankar Mahbub 2021,a programming Hero initiative.</p>
+    </footer>
 
 </body>
 
